--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "filter",
   "displayName": "PoE-Filter-language",
-  "description": "PoE-Filter script language",
+  "description": "a Path of Exile Filter script language",
+  "publisher": "MrHardWare",
   "version": "0.5.0",
   "repository": {
     "url": "https://github.com/HardWar3/poe-filter-language",
