--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filter",
+  "name": "path-of-exile-filter-language",
   "displayName": "PoE-Filter-language",
   "description": "a Path of Exile Filter script language",
   "publisher": "MrHardWare",
